--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "antd-img-crop": "^4.2.8",
     "axios": "^1.1.3",
     "import": "^0.0.6",
+    "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
